# arduino-report-size-deltas

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  cspell.config.yml  nurfile
.config/: cliff.toml
.github/: dependabot.yml
.github/workflows/: bump-n-release.nu  bump-n-release.yml  pre-commit.yml  rust.yml  self-test.yml
examples/: pr-comment.xcf  step-summary.xcf
src/: error.rs  lib.rs  main.rs
src/reports/: mod.rs  structs.rs
src/summarize/: helpers.rs  mod.rs  structs.rs
tests/size-deltas-reports-new/: out.md
tests/test_assets/: out.md
tests/test_assets/subpath/: arduino-avr-nano.json
