[package]
name = "arduino-report-size-deltas"
version = "1.0.2"
description = "Post a comment on the pull request with a report about the change in memory usage of Arduino sketches"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/2bndy5/arduino-report-size-deltas"
exclude = ["examples/", ".github/", ".vscode/"]

[[bin]]
name = "report-size-deltas"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1.0.100", optional = true }
clap = { version = "4.5.49", optional = true, features = ["derive", "env"] }
colored = { version = "3.0.0", optional = true }
git-bot-feedback = { version = "0.1.4", optional = true }
log = "0.4.28"
reqwest = { version = "0.12.24", optional = true, features = ["native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", optional = true, features = ["macros", "rt-multi-thread"] }

[features]
bin = ["dep:anyhow", "dep:clap", "dep:git-bot-feedback", "dep:colored", "dep:tokio"]
native-tls-vendored = ["dep:reqwest"]
default = []

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.23.0"
