[package]
name = "arduino-report-size-deltas"
version = "1.0.3"
description = "Post a comment on the pull request with a report about the change in memory usage of Arduino sketches"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/2bndy5/arduino-report-size-deltas"
exclude = ["examples/", ".github/", ".vscode/"]

[[bin]]
name = "report-size-deltas"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1.0.100", optional = true }
clap = { version = "4.5.51", optional = true, features = ["derive", "env"] }
colored = { version = "3.0.0", optional = true }
git-bot-feedback = { version = "0.2.0", optional = true }
log = "0.4.27"
reqwest = { version = "0.12.22", optional = true, features = ["native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.46.1", optional = true, features = ["macros", "rt-multi-thread"] }

[features]
bin = ["dep:anyhow", "dep:clap", "dep:git-bot-feedback", "dep:colored", "dep:tokio"]
native-tls-vendored = ["dep:reqwest"]
default = []

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.23.0"
