[package]
description = "Post a comment on the pull request with a report about the change in memory usage of Arduino sketches"
edition = "2024"
exclude = ["examples/", ".github/", ".vscode/"]
license = "GPL-3.0-or-later"
name = "arduino-report-size-deltas"
repository = "https://github.com/2bndy5/arduino-report-size-deltas"
version = "1.1.1"

[[bin]]
name = "report-size-deltas"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
anyhow = {version = "1.0.102", optional = true}
clap = {version = "4.6.1", optional = true, features = ["derive", "env"]}
colored = {version = "3.1.1", optional = true}
git-bot-feedback = {version = "0.5.3", optional = true}
log = "0.4.29"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = {version = "1.52.2", optional = true, features = ["macros", "rt-multi-thread"]}

[dependencies.reqwest]
version = "0.13.3"
optional = true
default-features = false
features = [
    "charset",
    "http2",
    "native-tls",
    "system-proxy",
]

[features]
bin = ["dep:anyhow", "dep:clap", "dep:git-bot-feedback", "dep:colored", "dep:tokio", "dep:reqwest"]
default = []
native-tls-vendored = ["reqwest/native-tls-vendored"]

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.27.0"
